# FicHubAPI

./: pyproject.toml
src/FicHubAPI/: __init__.py  main.py
